@@ -4,11 +4,11 @@ import lombok.AllArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import tacs.eventos.dto.EstadoInscripcionResponse;
-import tacs.eventos.model.Evento;
 import tacs.eventos.dto.InscripcionResponse;
-import tacs.eventos.model.inscripcion.EstadoInscripcion;
+import tacs.eventos.model.Evento;
 import tacs.eventos.model.RolUsuario;
 import tacs.eventos.model.Usuario;
+import tacs.eventos.model.inscripcion.EstadoInscripcion;
 import tacs.eventos.model.inscripcion.InscripcionEvento;
 import tacs.eventos.repository.WaitlistRepository;
 import tacs.eventos.repository.inscripcion.InscripcionesRepository;
@@ -46,13 +46,11 @@ public class UsuarioService {
                 .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado"));
         List<InscripcionEvento> inscripciones = inscripcionesRepository.getInscripcionesPorParticipante(usuario);
         List<InscripcionResponse> inscripcionResponses = inscripciones.stream()
-                .map(insc -> new InscripcionResponse(insc.getEvento().getId(), mapEstado(insc.getEstado())))
-                .collect(Collectors.toList());
+                .map(insc -> new InscripcionResponse(insc.getEvento().getId(), mapEstado(insc.getEstado()))).toList();
 
         List<Evento> eventosEnWaitlist = waitlistRepository.eventosEnCuyasWaitlistEsta(usuario);
         List<InscripcionResponse> waitlistResponses = eventosEnWaitlist.stream()
-                .map(evento -> new InscripcionResponse(evento.getId(), EstadoInscripcionResponse.EN_WAITLIST))
-                .collect(Collectors.toList());
+                .map(evento -> new InscripcionResponse(evento.getId(), EstadoInscripcionResponse.PENDIENTE)).toList();
 
         return Stream.concat(inscripcionResponses.stream(), waitlistResponses.stream()).collect(Collectors.toList());
     }
@@ -61,7 +59,7 @@ public class UsuarioService {
         return switch (estado) {
         case CONFIRMADA -> EstadoInscripcionResponse.CONFIRMADA;
         case CANCELADA -> EstadoInscripcionResponse.CANCELADA;
-        case WAITLIST -> EstadoInscripcionResponse.EN_WAITLIST;
+        case PENDIENTE -> EstadoInscripcionResponse.PENDIENTE;
         };
     }
 }
